# cpp_design_patterns

./: .gitignore  CMakeLists.txt  README.md
Behavioral/: CMakeLists.txt  README.md
Behavioral/chain_of_responsibility/: CMakeLists.txt  pointer_chain.cpp  signal_chain.cpp
Behavioral/command/: CMakeLists.txt  command.cpp  command_undo.cpp  composite_command.cpp
Behavioral/interpreter/: CMakeLists.txt  lexer_parser.cpp
Behavioral/iterator/: CMakeLists.txt  binary_tree_iterator.cpp  binary_tree_iterator_coroutines.cpp  boost_iterator_facade.cpp  iterators_in_stl.cpp
Behavioral/mediator/: CMakeLists.txt  ChatRoom.cpp  ChatRoom.h  Person.cpp  Person.h  main.cpp  soccer_event_broker.cpp
Behavioral/memento/: CMakeLists.txt  memento.cpp  undo_redo.cpp
Behavioral/observer/: CMakeLists.txt  boost_observer.cpp  observable.h  observer.h  raw_observer.cpp  safer_observable.h  thread_safety.cpp
Behavioral/state/: CMakeLists.txt  boost_msm.cpp  handmade_fsm.cpp  old_school_fsm.cpp
Behavioral/strategy/: CMakeLists.txt  dynamic_strategy.cpp  static_strategy.cpp
Behavioral/template/: CMakeLists.txt  template_method.cpp
Behavioral/visitor/: CMakeLists.txt  acyclic_visitor.cpp  double_dispatch_visitor.cpp  intrusive_visitor.cpp  multimethod_visitor.cpp  reflective_visitor.cpp  std_variant_visitor.cpp
Creational/: CMakeLists.txt  README.md
Creational/builder/: CMakeLists.txt  builder.cpp  exercise.cpp  fluent_builder.cpp  groovy_builder.cpp
Creational/builder/facade/: Person.cpp  Person.hpp  PersonAddressBuilder.hpp  PersonBuilder.cpp  PersonBuilder.hpp  PersonJobBuilder.hpp  main.cpp
Creational/factory/: CMakeLists.txt  exercise.cpp  factory.cpp  factory_method.cpp  inner_factory.cpp
Creational/factory/abstract/: DrinkFactory.hpp  HotDrink.hpp  HotDrinkFactory.hpp  main.cpp
Creational/prototype/: CMakeLists.txt  exercise.cpp  motivation.cpp  prototype.cpp  prototype_factory.cpp  prototype_serialization.cpp
Creational/singleton/: CMakeLists.txt  di.hpp  singleton.cpp  singleton_exercise.cpp  singleton_in_di_container.cpp  singleton_monostate.cpp  singleton_multiton.cpp  singleton_test_issues_and_di.cpp
SOLID/: CMakeLists.txt  README.md
SOLID/dependency_inversion/: CMakeLists.txt  main.cpp
SOLID/interface_segregation/: CMakeLists.txt  main.cpp
SOLID/liskov_substitution/: CMakeLists.txt  main.cpp
SOLID/open_closed/: CMakeLists.txt  main.cpp
SOLID/single_responsibility/: CMakeLists.txt  README.md  main.cpp
Structural/: CMakeLists.txt  README.md
Structural/adapter/: CMakeLists.txt  adapter_exercise.cpp  adapter_external.cpp  adapter_inheritance.cpp
Structural/bridge/: CMakeLists.txt  bridge.cpp  pimpl_idiom.cpp  pimpl_idiom.hpp  pimpl_library.cpp  pimpl_library.h
Structural/composite/: CMakeLists.txt  composite_array_backed_prop.cpp  composite_exercise.cpp  composite_neural_network.cpp  composite_shapes.cpp
Structural/decorator/: CMakeLists.txt  decorator_dynamic.cpp  decorator_functional.cpp  decorator_static.cpp
Structural/flyweight/: CMakeLists.txt  flyweight_boost.cpp  flyweight_handmade.cpp  flyweight_text.cpp
Structural/proxy/: CMakeLists.txt  proxy_communication.cpp  proxy_property.cpp  proxy_virtual.cpp
