project(behavioral)
add_subdirectory(chain_of_responsibility)
add_subdirectory(command)
add_subdirectory(interpreter)
add_subdirectory(iterator)
add_subdirectory(mediator)
add_subdirectory(memento)
add_subdirectory(observer)
#add_subdirectory(state)
#add_subdirectory(strategy)
#add_subdirectory(template)
#add_subdirectory(visitor)
